# ESP32-partDB

./: .gitignore  AUTHORS.md  LICENSE  NOTICE.md  README.md  README_EN.md
docs/: CHANGES_V1.0_TO_V1.1.md  CHANGES_V1.0_TO_V1.1_EN.md  CODE_FRAMEWORK.md  FEATURES.md  FEATURES_EN.md  GITHUB_RELEASE_V1.0.md  GITHUB_RELEASE_V1.1.md  GITHUB_RELEASE_V1.11.md  KNOWN_ISSUES.md  KNOWN_ISSUES_EN.md  NFC_PARTDB_FLOW.md  OPEN_SOURCE_DECLARATION.md  PROJECT_BRIEF_V1.0.md  PROJECT_BRIEF_V1.0_EN.md  RELEASE_CHECKLIST.md  RELEASE_V1.0.md  RELEASE_V1.1.md  RELEASE_V1.1_EN.md  ROADMAP.md  THIRD_PARTY_CODE.md
docs/licenses/: OFL-1.1.txt
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/components/zxing_qr/: CMakeLists.txt  zxing_qr_decoder.cpp
firmware/components/zxing_qr/include/: Version.h  zxing_qr_decoder.h
firmware/docs/: hardware-software-plan.md  optimization-roadmap.md  wiring-and-bringup.md
firmware/main/: CMakeLists.txt  app_config.c  app_config.h  app_main.c  board_config.h  button_input.c  button_input.h  camera_mgr.c  camera_mgr.h  device_ui.c  device_ui.h  display_ili9488.c  display_ili9488.h  hardware_diag.c  hardware_diag.h  http_server.c  http_server.h  i2c_bus.c  i2c_bus.h  idf_component.yml  nfc_i2c.c  nfc_i2c.h  nfc_pn532.c  nfc_pn532.h  nfc_service.c  nfc_service.h  partdb_client.c  partdb_client.h  peripheral_arbiter.c  peripheral_arbiter.h  psram_diag.c  psram_diag.h  qr_scanner.c  qr_scanner.h  runtime_guard.c  runtime_guard.h  soft_i2c.c  soft_i2c.h  storage_sd.c  storage_sd.h  (+7 more)
tools/: README.md  gen_ui_font_sizes.py  package_release.sh
tools/camera_bridge/: README.md  partdb-camera-bridge.env.example  partdb-camera-bridge.service  partdb_camera_bridge.py
